[package]
name = "aoc22"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
libc = { version = "0.2", default-features = false }

[profile.dev]
panic = "abort"


[profile.release]
strip = true
codegen-units = 1
panic = "abort"
lto = true
